Fixed overflow scroll for rule list

--- a/src/app/meeting/rule-list/rule-list.component.scss
+++ b/src/app/meeting/rule-list/rule-list.component.scss
@@ -5,3 +5,7 @@
 .temp {
   background-color: red;
 }
+
+ion-list {
+  overflow: auto;
+}
